<resources>
    <string name="app_name">WriteSpace</string>

    <string name="paint_type">Type</string>
    <string name="paint_size">Size</string>
    <string name="paint_color">Color</string>
    <string name="paint_alpha">Opacity</string>
    <string name="eraser_era">Eraser</string>
    <string name="eraser_clear">Clean</string>

    <string name="portrait">Portrait</string>
    <string name="land">Landscape</string>
    <string name="check_tip">Remember my choose and do not show this page again.</string>
    <string name="start_draw">Start Painting</string>
    <string name="screen_choose">Select screen orientation:</string>
    <string name="screen_choose_tip">Please select a screen orientation first.</string>

    <string name="menu">Menu</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_preview">Preview</string>
    <string name="menu_record">Record</string>
    <string name="menu_share">Share</string>

    <string name="record_time_def">00:00</string>

    <string name="palette_bg_color">Select Background Color:</string>
    <string name="palette_bg_colors">Colors:</string>
    <string name="back">Back</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="confirm">Confirm</string>

    <string name="save_type">Select save type:</string>
    <string-array name="save_sel">
        <item>Part</item>
        <item>All</item>
    </string-array>
    <string name="saving">Saving&#8230;</string>
    <string name="save_success">Save success.</string>
    <string name="save_failed">Save failed.</string>

    <string name="storage_access">The App want to access your Storage and read your phone state, Agree?</string>
    <string name="agree">Agree</string>
    <string name="disagree">Disagree</string>

    <string name="not_draw_yet">You have not draw anything yet.</string>
    <string name="need_storage_mission">Please allow storage permissions that needed in System Settings.</string>
    <string name="recording">Recording&#8230;</string>

    <string name="exit_tip">Are you sure to exit?</string>

    <string name="share_type">Select share type:</string>
    <string-array name="share_sel">
        <item>Part</item>
        <item>All</item>
    </string-array>
    <string name="generating">Generating the image&#8230;</string>
    <string name="generate_failed">Generate failed</string>
    <string name="welcome">Welcome</string>

    <string name="choose_photo">Choose a picture</string>
    <string name="over_img_limit">You have inserted too many pictures</string>
    <string name="save_location">The File Saved Path:%s</string>

    <string name="show_screen_set_again">Display screen settings page when the application starts</string>
</resources>