<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/screen_container"
        android:layout_alignStart="@+id/screen_container"
        android:layout_marginBottom="@dimen/dimen_40dp"
        android:text="@string/screen_choose"
        android:textColor="@android:color/black"
        android:textSize="@dimen/dimen_18sp" />

    <RelativeLayout
        android:id="@+id/screen_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <LinearLayout
            android:id="@+id/land_l"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/land_cb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:button="@drawable/screen_land_sel"
                android:checked="false"
                android:clickable="false"
                android:focusable="false"
                android:gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/land" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/port_l"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/port_cb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:button="@drawable/screen_port_sel"
                android:checked="false"
                android:clickable="false"
                android:focusable="false"
                android:gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/portrait" />
        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/agree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/screen_container"
        android:layout_below="@+id/screen_container"
        android:layout_marginTop="@dimen/dimen_40dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/agree_cb"
            android:layout_width="@dimen/dimen_30dp"
            android:layout_height="@dimen/dimen_30dp"
            android:layout_gravity="center_vertical"
            android:button="@drawable/check_box_selector"
            android:clickable="false"
            android:focusable="false" />

        <TextView
            android:id="@+id/agree_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/check_tip"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="@dimen/dimen_12sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/enter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="@dimen/dimen_40dp"
        android:layout_marginEnd="@dimen/dimen_40dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/enter_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/start_draw"
            android:textColor="@color/color_enter_enable"
            android:textSize="@dimen/dimen_14sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/dimen_6dp"
            android:src="@drawable/arrow" />
    </LinearLayout>
</RelativeLayout>